code refactoring and templates
