# src/main/java/com/contact/calculator/model/domain/PaymentResult.java
@@ -1,0 +1,13 @@
+package com.contact.calculator.model.domain;
+
+import lombok.*;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+@Builder
+public class PaymentResult {
+    private int paymentPeriods;
+    private double monthlyPayments;
+    private double total;
+}
